copyright content changed!

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a href="https://www.hackerrank.com/ghost071"><img class="hackerrank" src="images/hack.png" alt="HackerRank"></a>
   </div>
   <div class="copyright">
-    <p class="copycontent">Copyright © Made with ❤ by Subham Mohanty</p>
+    <p class="copycontent">Made with ❤ by Subham Mohanty © 2020. All rights reserved.</p>
   </div>
 </body>
 
